--- a/src/V3-FROGGER-vite/package.json
+++ b/src/V3-FROGGER-vite/package.json
@@ -14,6 +14,8 @@
     "vite": "^5.4.10"
   },
   "dependencies": {
+    "cannon-es": "^0.20.0",
+    "cannon-es-debugger": "^1.0.0",
     "three": "^0.169.0"
   }
 }
