--- a/src/V3-FROGGER-vite/tsconfig.json
+++ b/src/V3-FROGGER-vite/tsconfig.json
@@ -6,6 +6,9 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
 
+    /* types */
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+
     /* Bundler mode */
     "moduleResolution": "Bundler",
     "allowImportingTsExtensions": true,
