--- a/src/V3-FROGGER-vite/tsconfig.json
+++ b/src/V3-FROGGER-vite/tsconfig.json
@@ -7,7 +7,7 @@
     "skipLibCheck": true,
 
     /* types */
-    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "typeRoots": ["node_modules/@types", "src/types"],
 
     /* Bundler mode */
     "moduleResolution": "Bundler",
