--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ src/v3-frogger-vite/node_modules/
 src/v3-frogger-vite/node_modules/*
 src/v3-frogger-vite/dist/
 src/v3-frogger-vite/dist/*
+
+
+**/.DS_Store
